--- a/packages/opencode/opencode.github-app.json
+++ b/packages/opencode/opencode.github-app.json
@@ -1,5 +1,10 @@
 {
   "$schema": "https://opencode.ai/config.json",
+  "agent": {
+    "compaction": {
+      "prompt": "{file:./.opencode/prompts/compaction.txt}"
+    }
+  },
   "mcp": {
     "linear": {
       "type": "remote",
@@ -12,10 +17,16 @@
     "github": {
       "type": "local",
       "command": [
-        "docker", "run", "--rm", "-i",
-        "-e", "GITHUB_APP_ID",
-        "-e", "GITHUB_APP_INSTALLATION_ID",
-        "-e", "GITHUB_APP_PRIVATE_KEY",
+        "docker",
+        "run",
+        "--rm",
+        "-i",
+        "-e",
+        "GITHUB_APP_ID",
+        "-e",
+        "GITHUB_APP_INSTALLATION_ID",
+        "-e",
+        "GITHUB_APP_PRIVATE_KEY",
         "bbqparty/github-app-mcp"
       ],
       "environment": {
